Fix the code line spacing adjustment for the latest version of Furo

--- a/doc/src/_static/custom.css
+++ b/doc/src/_static/custom.css
@@ -1,11 +1,11 @@
 /* Reduce the vertical space between lines in code blocks. Required to */
 /* make Unicode pretty printing appear correctly. */
 pre {
-    line-height: 120%;
+    line-height: 120% !important;
 }
 
 article pre {
-    line-height: 120%;
+    line-height: 120% !important;
 }
 
 /* Completely disable blockquotes. The Furo defaults make block quotes very*/
